--- a/opinions.html
+++ b/opinions.html
@@ -57,8 +57,8 @@
 	    <li class="dropdown">
 		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
-            <li><a onclick="window.location.reload(true)">English</a></li>
-            <li><a onclick="tabsFilipinoTranslation(); opinionsFilipinoTranslation();">Filipino</a></li>
+            <li><a onclick="setEng(); window.location.reload(true)">English</a></li>
+            <li><a onclick="setFil(); tabsFilipinoTranslation(); opinionsFilipinoTranslation();">Filipino</a></li>
 		</ul>
 		</li>
 		</ul>
