--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div> 
         <div class="page"> 
             <a href=sogie.html>
-            <img class="button-preview" height=300px width=300px src="https://scontent.fmnl4-1.fna.fbcdn.net/v/t1.15752-9/89358608_512388322758736_116238101545746432_n.png?_nc_cat=104&_nc_sid=b96e70&_nc_ohc=V5-2l4ZOY_MAX_OrfGB&_nc_ht=scontent.fmnl4-1.fna&oh=498948074bd1942df79cea5b1411d21f&oe=5E8F1B22">
+            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/F2u7BIk.png">
             <button class="btn ">About the Bill</button>
             </a>
         </div>
