--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="page">  
         <a href=PHlgbt.html>
-			<img class="button-preview" height=300px width=300px src="https://scontent.fmnl4-4.fna.fbcdn.net/v/t1.15752-9/87609673_675346833235305_466624316692234240_n.png?_nc_cat=102&_nc_sid=b96e70&_nc_ohc=0jocQqYEtIMAX_yjidv&_nc_ht=scontent.fmnl4-4.fna&oh=6b621e74f84b94007352712c3eb7ec9f&oe=5E964649">
+			<img class="button-preview" height=300px width=300px src="https://i.imgur.com/G2Jzt0o.png">
             <button class="btn ">LGBT in the Philippines</button>
         </a>
         </div>
