--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="page"> 
           <a href="lgbt.html">
-            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/3u06jiW.png">
+            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/o2N2VIT.png">
             <button class="btn ">About the LGBT Community</button>
           </a>
         </div>
