--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         </div>
         <div class="page">  
           <a href=opinions.html>
-            <img class="button-preview" height=300px width=300px src="https://discourse.datamethods.org/uploads/default/original/1X/d33a521d19bb303cfdcde0b2472909377357ed45.png">
+            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/OxDno6O.png">
             <button class="btn ">Opinions</button>
           </a>
         </div>
         <div class="page"> 
           <a href="lgbt.html">
-            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/o2N2VIT.png">
+            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/GrFpe19.png">
             <button class="btn ">About the LGBT Community</button>
           </a>
         </div>
