--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
       <p> Welcome to our website! Here we wish to clarify misinformation regarding the SOGIE Equality Bill (House Bill No. 4982). Our website also contains information about the LGBT community in the Philippines and in general.</p>
         <div class="page">
           <a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf">
-            <img class="button-preview" width=300px height=300px src="https://i.imgur.com/JiqHhLx.png">
+            <img class="button-preview" width=300px height=300px src="https://i.imgur.com/6tqJiVn.png">
             <button class="btn ">Read the bill here</button>
           </a>
         </div> 
         <div class="page"> 
-            <a href=sogie.html>
+          <a href=sogie.html>
             <img class="button-preview" height=300px width=300px src="https://i.imgur.com/F2u7BIk.png">
             <button class="btn ">About the Bill</button>
-            </a>
+          </a>
         </div>
         <div class="page">  
           <a href=opinions.html>
@@ -95,16 +95,16 @@
           </a>
         </div>
         <div class="page">  
-        <a href=PHlgbt.html>
+          <a href=PHlgbt.html>
 			<img class="button-preview" height=300px width=300px src="https://i.imgur.com/SB4MQCA.png">
             <button class="btn ">LGBT in the Philippines</button>
-        </a>
+          </a>
         </div>
         <div class="page">  
-            <a href=about.html>
+		  <a href=about.html>
 			<img class="button-preview" height=300px width=300px src="https://i.imgur.com/KKZJkBH.png">
             <button class="btn ">About the Authors</button>
-            </a>
+          </a>
         </div>
     </div>
   </body>
