--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
         </div>
         <div class="page"> 
           <a href="lgbt.html">
-            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/GrFpe19.png">
+            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/5BA8jbK.png">
           </a>
         </div>
         <div class="page">  
           <a href=PHlgbt.html>
-			<img class="button-preview" height=300px width=300px src="https://i.imgur.com/SB4MQCA.png">
+	    <img class="button-preview" height=300px width=300px src="https://i.imgur.com/SB4MQCA.png">
           </a>
         </div>
         <div class="page">  
-		  <a href=about.html>
-			<img class="button-preview" height=300px width=300px src="https://i.imgur.com/KKZJkBH.png">
+	  <a href=about.html>
+	    <img class="button-preview" height=300px width=300px src="https://i.imgur.com/KKZJkBH.png">
           </a>
         </div>
     </div>
