--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="page"> 
           <a href="lgbt.html">
-            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/jztlSoC.png">
+            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/6mceDoj.png">
           </a>
         </div>
         <div class="page">  
