--- a/index.html
+++ b/index.html
@@ -72,32 +72,32 @@
       <p> Welcome to our website! Here we wish to clarify misinformation regarding the SOGIE Equality Bill (House Bill No. 4982). Our website also contains information about the LGBT community in the Philippines and in general.</p>
         <div class="page">
           <a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf">
-            <img class="button-preview" width=300px height=300px src="https://i.imgur.com/TDeI8D3.png id="pdf">
+            <img id="pdf" class="button-preview" width=300px height=300px src="https://i.imgur.com/TDeI8D3.png>
           </a>
         </div> 
         <div class="page"> 
           <a href=sogie.html>
-            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/F2u7BIk.png" id="risa">
+            <img id="risa" class="button-preview" height=300px width=300px src="https://i.imgur.com/F2u7BIk.png">
           </a>
         </div>
         <div class="page">  
           <a href=opinions.html>
-            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/OxDno6O.png" id="chat">
+            <img id="chat" class="button-preview" height=300px width=300px src="https://i.imgur.com/OxDno6O.png">
           </a>
         </div>
         <div class="page"> 
           <a href="lgbt.html">
-            <img class="button-preview" height=300px width=300px src="https://i.imgur.com/XJeSmL0.png" id="flag">
+            <img id="flag" class="button-preview" height=300px width=300px src="https://i.imgur.com/XJeSmL0.png">
           </a>
         </div>
         <div class="page">  
           <a href=PHlgbt.html>
-	    <img class="button-preview" height=300px width=300px src="https://i.imgur.com/SB4MQCA.png" id="babaylan">
+	    <img id="babaylan" class="button-preview" height=300px width=300px src="https://i.imgur.com/SB4MQCA.png">
           </a>
         </div>
         <div class="page">  
 	  <a href=about.html>
-	    <img class="button-preview" height=300px width=300px src="https://i.imgur.com/KKZJkBH.png" id="pshs">
+	    <img id="pshs" class="button-preview" height=300px width=300px src="https://i.imgur.com/KKZJkBH.png">
           </a>
         </div>
     </div>
