--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <p> Welcome to our website! Here we wish to clarify misinformation regarding the SOGIE Equality Bill (House Bill No. 4982). Our website also contains information about the LGBT community in the Philippines and in general.</p>
         <div class="page">
           <a href="https://www.senate.gov.ph/lisdata/2517921693!.pdf">
-            <img id="pdf" class="button-preview" width=300px height=300px src="https://i.imgur.com/TDeI8D3.png>
+            <img id="pdf" class="button-preview" width=300px height=300px src="https://i.imgur.com/TDeI8D3.png">
           </a>
         </div> 
         <div class="page"> 
