--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		</ul>
 		</li>
 		</ul>
-		<input onclick="nightMode()" class="navbar-btn" type = "image" src="https://cdn6.aptoide.com/imgs/8/c/1/8c1df2595802dbcb2ee2b12ec70e2938_icon.png?w=240" height=30px width=30px id = "toggler">
+		<input class="navbar-btn" type = "image" src="https://cdn6.aptoide.com/imgs/8/c/1/8c1df2595802dbcb2ee2b12ec70e2938_icon.png?w=240" height=30px width=30px id = "toggler">
 		</div>
 		</nav>
 </div>
