--- a/news.html
+++ b/news.html
@@ -67,5 +67,10 @@
      
     </div>
   </body>
+	<script>
+		 if (localStorage.language == "filipino"){
+			 tabsFilipinoTranslation(); 
+		 }
+	  </script> 
 </html>
 
