--- a/jerome.html
+++ b/jerome.html
@@ -66,5 +66,10 @@
 
     </div>
   </body>
+	<script>
+		 if (localStorage.language == "filipino"){
+			 tabsFilipinoTranslation();
+		 }
+	  </script> 
 </html>
 
