--- a/mikey.html
+++ b/mikey.html
@@ -66,4 +66,9 @@
 </div>
     </div>
   </body>
+	<script>
+		 if (localStorage.language == "filipino"){
+			 tabsFilipinoTranslation();
+		 }
+	  </script> 
 </html>
