--- a/mikey.html
+++ b/mikey.html
@@ -64,6 +64,19 @@
 		</div>
 		</nav>
 </div>
+	    <div class = "profile">
+          <img src=https://scontent.fmnl10-1.fna.fbcdn.net/v/t1.0-9/p960x960/84558398_586621618596743_8750486400874315776_o.jpg?_nc_cat=105&_nc_sid=85a577&_nc_oc=AQlKO2n5BuB3ePM5BW43M9u1QMcvDwusEGKJPLoApG4oMFr8zgGEzYS6CPZ6cz1_hSI&_nc_ht=scontent.fmnl10-1.fna&_nc_tp=6&oh=0b7c8a8412dc913157cf44bab5eb792d&oe=5E7FF771 alt = "Mikhail Ganzon">
+          <h2> Mikhail Ganzon </h2>
+            <p> He/Him || 16 || University of the Philippines Integrated School <br>
+            In my opinion, I think the discriminatory acts need to be more broad,
+            and not limited to only gender discrimination as the bill implies.
+            Furthermore, I hope that this will encourage Filipinos to be more
+            open to foreign ideas, as we are a religious country and there are
+            still some things that the older generation consider as "taboo".
+            All in all though, I appreciate the bill and I would hope for it
+            to be passed, as this will help many closeted people be less ashamed
+            to be who they really are, as I personally know some people like them.</p>
+        </div>
     </div>
   </body>
 	<script>
