--- a/rain.html
+++ b/rain.html
@@ -63,7 +63,17 @@
 		</div>
 		</nav>
 </div>
-
+<div class = "profile">
+          <img src=https://u.ph.edim.co/91bd/127376234_4_140.png alt = "Rain Lee">
+          <h2> Rain Lee </h2>
+            <p> She/Her || 14 || St. Mary's Academy of Sta. Ana, Manila <br>
+            The SOGIE Bill aims to protect the interests of not only the
+            LGBTQI+ community, but of every Filipino as well, and that's
+            why I agree with its implementation. It only has the good
+            intention of allowing everyone to have their own freedom of
+            expression without being discriminated due to the stereotypes
+            in our society. </p>
+        </div>
     </div>
   </body>
 	<script>
