--- a/news.html
+++ b/news.html
@@ -63,7 +63,24 @@
 		</div>
 		</nav>
 </div>
-
+<div class=col-sm-9>
+	<h2>Rappler</h2><br>
+	 <iframe src="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill"></iframe> <br>
+	<h2>The Philippine Star</h2>
+	 <iframe src="https://www.philstar.com/search/sogie"></iframe> <br>
+	<h2>ABS-CBN News</h2>
+	 <iframe src="https://news.abs-cbn.com/list/tag/sogie"></iframe> 
+</div>
+ <div class="col-sm-3">
+ <form id="rateus">
+ <fieldset>
+ <legend> Rate our website! </legend>
+<label for=rating>Rating (1 to 10): </label><br><input name=rating type ="number" min=1 max=10 required>
+ <label for=reason>Reason for rating: </label><br><input name=reason type=text maxlength=300 required>
+<br><input type=button name = "authSub" value = "Submit">
+  </fieldset>
+ </form>
+  </div>	   
      
     </div>
   </body>
