--- a/mikey.html
+++ b/mikey.html
@@ -65,7 +65,7 @@
 		</nav>
 </div>
 	    <div class = "profile">
-          <img src=https://scontent.fmnl10-1.fna.fbcdn.net/v/t1.0-9/p960x960/84558398_586621618596743_8750486400874315776_o.jpg?_nc_cat=105&_nc_sid=85a577&_nc_oc=AQlKO2n5BuB3ePM5BW43M9u1QMcvDwusEGKJPLoApG4oMFr8zgGEzYS6CPZ6cz1_hSI&_nc_ht=scontent.fmnl10-1.fna&_nc_tp=6&oh=0b7c8a8412dc913157cf44bab5eb792d&oe=5E7FF771 alt = "Mikhail Ganzon">
+          <img src=https://imgur.com/iAZI6dL.png alt = "Mikhail Ganzon">
           <h2> Mikhail Ganzon </h2>
             <p> He/Him || 16 || University of the Philippines Integrated School <br>
             In my opinion, I think the discriminatory acts need to be more broad,
