--- a/rain.html
+++ b/rain.html
@@ -64,7 +64,7 @@
 		</nav>
 </div>
 <div class = "profile">
-          <img src=https://u.ph.edim.co/91bd/127376234_4_140.png alt = "Rain Lee">
+          <img src=https://imgur.com/XZdqOng.png alt = "Rain Lee">
           <h2> Rain Lee </h2>
             <p> She/Her || 14 || St. Mary's Academy of Sta. Ana, Manila <br>
             The SOGIE Bill aims to protect the interests of not only the
