--- a/jerome.html
+++ b/jerome.html
@@ -63,7 +63,7 @@
 		</div>
 		</nav>
 </div>
-<div class = "profile">
+<div class = "profile col-sm-9">
           <img src=https://imgur.com/n0NhReS.png alt = "Jerome Estrella">
           <h2> Jerome Estrella </h2>
             <p> He/Him || 14 || Ateneo de Manila Grade School <br>
@@ -72,6 +72,16 @@
             because misinformation is the main cause of the negative reputation of 
             marginalized communities like the LGBTQ.</p>
         </div>
+	    <div class="col-sm-3">
+      <form id="rateus">
+      <fieldset>
+		  <legend> Rate our website! </legend>
+		  <label for=rating>Rating (1 to 10): </label><br><input name=rating type ="number" min=1 max=10 required>
+      <label for=reason>Reason for rating: </label><br><input name=reason type=text maxlength=300 required>
+		  <br><input type=button name = "authSub" value = "Submit">
+      </fieldset>
+      </form>
+      </div>
     </div>
   </body>
 	<script>
