--- a/mikey.html
+++ b/mikey.html
@@ -64,7 +64,7 @@
 		</div>
 		</nav>
 </div>
-	    <div class = "profile">
+	    <div class = "profile col-sm-9">
           <img src=https://imgur.com/iAZI6dL.png alt = "Mikhail Ganzon">
           <h2> Mikhail Ganzon </h2>
             <p> He/Him || 16 || University of the Philippines Integrated School <br>
@@ -77,6 +77,16 @@
             to be passed, as this will help many closeted people be less ashamed
             to be who they really are, as I personally know some people like them.</p>
         </div>
+	    <div class="col-sm-3">
+      <form id="rateus">
+      <fieldset>
+		  <legend> Rate our website! </legend>
+		  <label for=rating>Rating (1 to 10): </label><br><input name=rating type ="number" min=1 max=10 required>
+      <label for=reason>Reason for rating: </label><br><input name=reason type=text maxlength=300 required>
+		  <br><input type=button name = "authSub" value = "Submit">
+      </fieldset>
+      </form>
+      </div>
     </div>
   </body>
 	<script>
