--- a/rain.html
+++ b/rain.html
@@ -63,7 +63,7 @@
 		</div>
 		</nav>
 </div>
-<div class = "profile">
+<div class = "profile col-sm-9">
           <img src=https://imgur.com/XZdqOng.png alt = "Rain Lee">
           <h2> Rain Lee </h2>
             <p> She/Her || 14 || St. Mary's Academy of Sta. Ana, Manila <br>
@@ -74,6 +74,16 @@
             expression without being discriminated due to the stereotypes
             in our society. </p>
         </div>
+	    <div class="col-sm-3">
+      <form id="rateus">
+      <fieldset>
+		  <legend> Rate our website! </legend>
+		  <label for=rating>Rating (1 to 10): </label><br><input name=rating type ="number" min=1 max=10 required>
+      <label for=reason>Reason for rating: </label><br><input name=reason type=text maxlength=300 required>
+		  <br><input type=button name = "authSub" value = "Submit">
+      </fieldset>
+      </form>
+      </div>
     </div>
   </body>
 	<script>
