--- a/jerome.html
+++ b/jerome.html
@@ -63,14 +63,14 @@
 		</div>
 		</nav>
 </div>
-<div class = "profile col-sm-9">
+<div class = "col-sm-9">
           <img src=https://imgur.com/n0NhReS.png alt = "Jerome Estrella">
-          <h2> Jerome Estrella </h2>
-            <p> He/Him || 14 || Ateneo de Manila Grade School <br>
+          <h1> Jerome Estrella </h1>
+            <h3> He/Him || 14 || Ateneo de Manila Grade School <br>
             I think that the SOGIE Equality Bill would be mainly beneficial for people. 
             I am particularly in favor for the education systems they will implement, 
             because misinformation is the main cause of the negative reputation of 
-            marginalized communities like the LGBTQ.</p>
+            marginalized communities like the LGBTQ.</h3>
         </div>
 	    <div class="col-sm-3">
       <form id="rateus">
