--- a/rain.html
+++ b/rain.html
@@ -63,16 +63,16 @@
 		</div>
 		</nav>
 </div>
-<div class = "profile col-sm-9">
+<div class = "col-sm-9">
           <img src=https://imgur.com/XZdqOng.png alt = "Rain Lee">
-          <h2> Rain Lee </h2>
-            <p> She/Her || 14 || St. Mary's Academy of Sta. Ana, Manila <br>
+          <h1> Rain Lee </h1>
+            <h3> She/Her || 14 || St. Mary's Academy of Sta. Ana, Manila <br>
             The SOGIE Bill aims to protect the interests of not only the
             LGBTQI+ community, but of every Filipino as well, and that's
             why I agree with its implementation. It only has the good
             intention of allowing everyone to have their own freedom of
             expression without being discriminated due to the stereotypes
-            in our society. </p>
+            in our society. </h3>
         </div>
 	    <div class="col-sm-3">
       <form id="rateus">
