--- a/jerome.html
+++ b/jerome.html
@@ -64,6 +64,7 @@
 		</nav>
 </div>
 <div class = "col-sm-9">
+	<div class=profile>
           <img src=https://imgur.com/n0NhReS.png alt = "Jerome Estrella">
           <h1> Jerome Estrella </h1>
             <h3> He/Him || 14 || Ateneo de Manila Grade School <br>
@@ -72,6 +73,7 @@
             because misinformation is the main cause of the negative reputation of 
             marginalized communities like the LGBTQ.</h3>
         </div>
+	    </div>
 	    <div class="col-sm-3">
       <form id="rateus">
       <fieldset>
