--- a/mikey.html
+++ b/mikey.html
@@ -65,6 +65,7 @@
 		</nav>
 </div>
 	    <div class = "col-sm-9">
+		    <div class=profile>
           <img src=https://imgur.com/iAZI6dL.png alt = "Mikhail Ganzon">
           <h1> Mikhail Ganzon </h1>
             <h3> He/Him || 16 || University of the Philippines Integrated School <br>
@@ -77,6 +78,7 @@
             to be passed, as this will help many closeted people be less ashamed
             to be who they really are, as I personally know some people like them.</h3>
         </div>
+	    </div>
 	    <div class="col-sm-3">
       <form id="rateus">
       <fieldset>
