--- a/rain.html
+++ b/rain.html
@@ -64,6 +64,7 @@
 		</nav>
 </div>
 <div class = "col-sm-9">
+	<div class=profile>
           <img src=https://imgur.com/XZdqOng.png alt = "Rain Lee">
           <h1> Rain Lee </h1>
             <h3> She/Her || 14 || St. Mary's Academy of Sta. Ana, Manila <br>
@@ -74,6 +75,7 @@
             expression without being discriminated due to the stereotypes
             in our society. </h3>
         </div>
+	    </div>
 	    <div class="col-sm-3">
       <form id="rateus">
       <fieldset>
