--- a/news.html
+++ b/news.html
@@ -65,11 +65,11 @@
 </div>
 <div class=col-sm-12>
 	<h2>Rappler</h2><br>
-	 <iframe src="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill"></iframe> <br>
+	 <iframe height=33% width=100% src="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill"></iframe> <br>
 	<h2>The Philippine Star</h2>
-	 <iframe src="https://www.philstar.com/search/sogie"></iframe> <br>
+	 <iframe height=33% width=100% src="https://www.philstar.com/search/sogie"></iframe> <br>
 	<h2>ABS-CBN News</h2>
-	 <iframe src="https://news.abs-cbn.com/list/tag/sogie"></iframe> 
+	 <iframe height=33% width=100% src="https://news.abs-cbn.com/list/tag/sogie"></iframe> 
 </div>
    
      
