--- a/jerome.html
+++ b/jerome.html
@@ -67,11 +67,11 @@
 	<div class=profile>
           <img src=https://imgur.com/n0NhReS.png alt = "Jerome Estrella">
           <h1> Jerome Estrella </h1>
-            <h3> He/Him || 14 || Ateneo de Manila Grade School <br>
+            <p> He/Him || 14 || Ateneo de Manila Grade School <br>
             I think that the SOGIE Equality Bill would be mainly beneficial for people. 
             I am particularly in favor for the education systems they will implement, 
             because misinformation is the main cause of the negative reputation of 
-            marginalized communities like the LGBTQ.</h3>
+            marginalized communities like the LGBTQ.</p>
         </div>
 	    </div>
 	    <div class="col-sm-3">
