--- a/mikey.html
+++ b/mikey.html
@@ -68,7 +68,7 @@
 		    <div class=profile>
           <img src=https://imgur.com/iAZI6dL.png alt = "Mikhail Ganzon">
           <h1> Mikhail Ganzon </h1>
-            <h3> He/Him || 16 || University of the Philippines Integrated School <br>
+            <p> He/Him || 16 || University of the Philippines Integrated School <br>
             In my opinion, I think the discriminatory acts need to be more broad,
             and not limited to only gender discrimination as the bill implies.
             Furthermore, I hope that this will encourage Filipinos to be more
@@ -76,7 +76,7 @@
             still some things that the older generation consider as "taboo".
             All in all though, I appreciate the bill and I would hope for it
             to be passed, as this will help many closeted people be less ashamed
-            to be who they really are, as I personally know some people like them.</h3>
+            to be who they really are, as I personally know some people like them.</p>
         </div>
 	    </div>
 	    <div class="col-sm-3">
