--- a/news.html
+++ b/news.html
@@ -64,12 +64,11 @@
 		</nav>
 </div>
 <div class=col-sm-12>
-	<h2>Rappler</h2><br>
-	 <iframe height=33% width=100% src="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill"></iframe> <br>
-	<h2>The Philippine Star</h2>
-	 <iframe height=33% width=100% src="https://www.philstar.com/search/sogie"></iframe> <br>
-	<h2>ABS-CBN News</h2>
-	 <iframe height=33% width=100% src="https://news.abs-cbn.com/list/tag/sogie"></iframe> 
+	<a href="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill" target=_blank><h2>Rappler</h2></a><br>
+	<a href=https://www.philstar.com/search/sogie target=_blank><h2>The Philippine Star</h2></a><br>
+	<a href=https://news.abs-cbn.com/list/tag/sogie target=_blank><h2>ABS-CBN News</h2></a>
+	<h2> Summary of the latest news: </h2>
+	<p></p>
 </div>
    
      
