--- a/news.html
+++ b/news.html
@@ -64,8 +64,8 @@
 		</nav>
 </div>
 <div class=col-sm-12>
-	<a href="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill" target=_blank><h2>Rappler</h2></a><br>
-	<a href=https://www.philstar.com/search/sogie target=_blank><h2>The Philippine Star</h2></a><br>
+	<a href="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill" target=_blank><h2>Rappler</h2></a>
+	<a href=https://www.philstar.com/search/sogie target=_blank><h2>The Philippine Star</h2></a>
 	<a href=https://news.abs-cbn.com/list/tag/sogie target=_blank><h2>ABS-CBN News</h2></a>
 	<h2> Summary of the latest news: </h2>
 	<p></p>
