--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
           </a>
         </div>
         <div class="page">  
-	  <a href=about.html>
-	    <img id="pshs" class="button-preview" height=300px width=300px src="https://i.imgur.com/KKZJkBH.png">
+	  <a href=news.html>
+	    <img id="news" class="button-preview" height=300px width=300px src="https://i.imgur.com/fc1jZuA.png">
           </a>
         </div>
     </div>
