--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <div class="page">  
 	  <a href=news.html>
-	    <img id="news" class="button-preview" height=300px width=300px src="https://i.imgur.com/JHguhm5.png">
+	    <img id="newsIcon" class="button-preview" height=300px width=300px src="https://i.imgur.com/JHguhm5.png">
           </a>
         </div>
     </div>
