--- a/mikey.html
+++ b/mikey.html
@@ -56,7 +56,7 @@
 		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
             <li><a onclick="window.location.reload(true)">English</a></li>
-            <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
+            <li><a onclick="tabsFilipinoTranslation(); mikeyFilipinoTranslation();">Filipino</a></li>
 		</ul>
 		</li>
 		</ul>
