--- a/rain.html
+++ b/rain.html
@@ -55,7 +55,7 @@
 		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
             <li><a onclick="window.location.reload(true)">English</a></li>
-            <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
+            <li><a onclick="tabsFilipinoTranslation(); rainFilipinoTranslation();">Filipino</a></li>
 		</ul>
 		</li>
 		</ul>
