--- a/news.html
+++ b/news.html
@@ -55,7 +55,7 @@
 		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
             <li><a onclick="window.location.reload(true)">English</a></li>
-            <li><a onclick="tabsFilipinoTranslation(); homeFilipinoTranslation();">Filipino</a></li>
+            <li><a onclick="tabsFilipinoTranslation(); newsFilipinoTranslation();">Filipino</a></li>
 		</ul>
 		</li>
 		</ul>
@@ -67,7 +67,7 @@
 	<a href="https://www.rappler.com/previous-articles?filterMeta=SOGIE%20Equality%20Bill" target=_blank><h2>Rappler</h2></a>
 	<a href=https://www.philstar.com/search/sogie target=_blank><h2>The Philippine Star</h2></a>
 	<a href=https://news.abs-cbn.com/list/tag/sogie target=_blank><h2>ABS-CBN News</h2></a>
-	<h2> Summary of the latest news: </h2>
+	<h2 id="summary"> Summary of the latest news: </h2>
 	<p>The SOGIE Equality Bill has yet to be approved, and unfortunately does not seem likely to for now, as the current Senate President Tito Sotto has stated: "Anti-discrimination on persons, p'wede. [P]ero focused on gays, which the SOGIE bill is, and religious and academic freedom impeded; plus smuggling of same-sex marriage? No chance!" Given the information on this website, perhaps you can form a more well-informed opinion that President Sotto's.</p>
 </div>
    
