--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
   </body>
 	<script>
 		 if (localStorage.language == "filipino"){
-			 tabsFilipinoTranslation(); 
+			 tabsFilipinoTranslation(); newsFilipinoTranslation();
 		 }
 	  </script> 
 </html>
