--- a/jerome.html
+++ b/jerome.html
@@ -88,7 +88,7 @@
   </body>
 	<script>
 		 if (localStorage.language == "filipino"){
-			 tabsFilipinoTranslation();
+			 tabsFilipinoTranslation(); jeromeFilipinoTranslation(); rateFilipinoTranslation();
 		 }
 	  </script> 
 </html>
