--- a/mikey.html
+++ b/mikey.html
@@ -93,7 +93,7 @@
   </body>
 	<script>
 		 if (localStorage.language == "filipino"){
-			 tabsFilipinoTranslation();
+			 tabsFilipinoTranslation(); mikeyFilipinoTranslation(); rateFilipinoTranslation();
 		 }
 	  </script> 
 </html>
