--- a/rain.html
+++ b/rain.html
@@ -90,7 +90,7 @@
   </body>
 	<script>
 		 if (localStorage.language == "filipino"){
-			 tabsFilipinoTranslation();
+			 tabsFilipinoTranslation(); rainFilipinoTranslation(); rateFilipinoTranslation();
 		 }
 	  </script> 
 </html>
