--- a/rain.html
+++ b/rain.html
@@ -54,8 +54,8 @@
 	    <li class="dropdown">
 		<a class="dropdown-toggle" data-toggle="dropdown" id="language">Language<span class="caret"></span></a>
 		<ul class="dropdown-menu">
-            <li><a onclick="window.location.reload(true)">English</a></li>
-            <li><a onclick="tabsFilipinoTranslation(); rainFilipinoTranslation(); rateFilipinoTranslation();">Filipino</a></li>
+            <li><a onclick="setEng(); window.location.reload(true)">English</a></li>
+            <li><a onclick="setFil(); tabsFilipinoTranslation(); rainFilipinoTranslation(); rateFilipinoTranslation();">Filipino</a></li>
 		</ul>
 		</li>
 		</ul>
